Add PdM machine seeding flow
